<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Skipass</string>
    <string name="your_name">Your name</string>
    <string name="your_phone">Your phone</string>
    <string name="your_email">Your email</string>
    <string name="your_skipasses">Your skipasses</string>
    <string name="edit">Edit</string>
    <string name="edit_f">Edit Your profile</string>
    <string name="submit">Submit</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_login">Login</string>
    <string name="action_contact">Contact us</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="ski_resort">Ski Resort</string>
    <string name="price">Price</string>
    <string name="Price">Enter Your Price (UAH)</string>
    <string name="type">Type</string>
    <string name="Type">Enter the Type of Your Skipass</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="remove">Remove</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="start">Start date of skiing</string>
    <string name="end">End date of skiing</string>
    <string name="Finish">Press Finish to proceed</string>
    <string name="finish">Finish</string>
    <string-array name="menu_array">
        <item>Ski Resorts</item>
        <item>Your Profile</item>
        <item>Your Ski-passes</item>
    </string-array>

</resources>
