<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/edit_f"
            android:id="@+id/textHeader" android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>



    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/your_name"
                    android:id="@+id/textName" android:layout_gravity="top|center_horizontal"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="Name"
                    android:ems="10"
                    android:id="@+id/editName" android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_weight="1" android:layout_marginRight="@dimen/activity_horizontal_margin"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/your_phone"
                    android:id="@+id/textPhone" android:layout_gravity="top|center_horizontal"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/editPhone" android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_weight="1" android:layout_marginRight="@dimen/activity_horizontal_margin"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/your_email"
                    android:id="@+id/textEmail" android:layout_gravity="top|center_horizontal"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/editEmail" android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_weight="1" android:layout_marginRight="@dimen/activity_horizontal_margin"/>
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:id="@+id/submit_button" android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_gravity="right"/>
        </TableRow>
    </TableLayout>

</LinearLayout>